# edflib-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
crates/edflib/: Cargo.toml  README.md
crates/edflib-sys/: Cargo.toml  build.rs
crates/edflib-sys/src/: lib.rs
crates/edflib/examples/: generator.rs
crates/edflib/src/: lib.rs  utils.rs
examples/: generator.rs  simple.rs
src/: lib.rs
