[package]
name = "edflib-sys"
version = "0.0.2"
description = "Rust low-level binding for EDFlib, C/C++ library to read/write EDF+ and BDF+ files."
keywords = ["rust", "EDF", "EDFlib", "binding", "EEG"]
repository = "https://github.com/eugenehp/edflib-rs"
license-file = "LICENSE"
edition = "2021"
resolver = "2"

[lib]

[dependencies]

[build-dependencies]
cc = "1.2.26"
bindgen = "0.72.0"
cmake = "0.1.54"